--- a/lib/package.json
+++ b/lib/package.json
@@ -2,8 +2,8 @@
   "name": "@allisonadam81/react-native-super-clusters",
   "version": "0.0.1",
   "description": "React Native Map Clustering both for Android and iOS",
-  "types": "index.d.ts",
-  "main": "index.js",
+  "main": "index.ts",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
@@ -25,8 +25,16 @@
     "supercluster": "^8.0.1"
   },
   "peerDependencies": {
+    "react": "*",
     "react-native": "*",
     "react-native-maps": "*"
   },
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "@types/react": "^19.1.6",
+    "@types/supercluster": "^7.1.3",
+    "react": "^19.1.0",
+    "react-native": "^0.79.2",
+    "react-native-maps": "^1.23.8"
+  }
 }
