--- a/lib/package.json
+++ b/lib/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/react": "^19.1.6",
     "@types/supercluster": "^7.1.3",
+    "prettier": "3.5.3",
     "react": "^19.1.0",
     "react-native": "^0.79.2",
     "react-native-maps": "^1.23.8"
